# SurfaceScry

./: CMakeLists.txt  README.md
include/surfacescry/: surfacescry.hpp
resources/: surfacescry.qrc
src/libsurfacescry/: CMakeLists.txt  kde_window_manager_backend.cpp  kde_window_manager_backend.hpp  window.cpp  window.hpp  window_manager.cpp  window_manager.hpp  window_types.cpp  window_types.hpp
src/surfacescry-gui/: CMakeLists.txt  EventLogModel.cpp  EventLogModel.hpp  EventLogView.cpp  EventLogView.hpp  MainWindow.cpp  MainWindow.hpp  PropertyInspectorWidget.cpp  PropertyInspectorWidget.hpp  WindowTreeModel.cpp  WindowTreeModel.hpp  main.cpp
